Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build:
     - make -j
   artifacts:
     paths:
-      - instructions.pdf
+      - cluster_instructions.pdf
     expire_in: 4 weeks  
 
 ...
